image pour alix

--- a/TracteurXtreme/TracteurXtreme.csproj
+++ b/TracteurXtreme/TracteurXtreme.csproj
@@ -39,6 +39,7 @@
     <None Remove="img\imgTracteurs\haut\tracteurOrange_haut.png" />
     <None Remove="img\imgTracteurs\haut\tracteurRouge_haut.png" />
     <None Remove="img\imgTracteurs\haut\tracteurVert_haut.png" />
+    <None Remove="img\piste.png" />
     <None Remove="img\race_tracteur.png" />
     <None Remove="img\tracteur_vert.png" />
   </ItemGroup>
@@ -74,6 +75,7 @@
     <Resource Include="img\imgTracteurs\haut\tracteurOrange_haut.png" />
     <Resource Include="img\imgTracteurs\haut\tracteurRouge_haut.png" />
     <Resource Include="img\imgTracteurs\haut\tracteurVert_haut.png" />
+    <Resource Include="img\piste.png" />
     <Resource Include="img\race_tracteur.png" />
     <Resource Include="img\tracteur_vert.png" />
   </ItemGroup>
