--- a/TracteurXtreme/TracteurXtreme.csproj
+++ b/TracteurXtreme/TracteurXtreme.csproj
@@ -12,7 +12,7 @@
     <None Remove="img\backcircuit1.png" />
     <None Remove="img\backCircuit2.png" />
     <None Remove="img\backCircuit3.png" />
-    <None Remove="img\backPageAceuil.png" />
+    <None Remove="img\backPageAccueil.png" />
     <None Remove="img\circuit1.png" />
     <None Remove="img\circuit3.png" />
     <None Remove="img\imgTracteurs\bas\tracteurBleu_bas.png" />
@@ -49,7 +49,7 @@
     <Resource Include="img\backcircuit1.png" />
     <Resource Include="img\backCircuit2.png" />
     <Resource Include="img\backCircuit3.png" />
-    <Resource Include="img\backPageAceuil.png" />
+    <Resource Include="img\backPageAccueil.png" />
     <Resource Include="img\circuit1.png" />
     <Resource Include="img\circuit3.png" />
     <Resource Include="img\imgTracteurs\bas\tracteurBleu_bas.png" />
