--- a/TracteurXtreme/TracteurXtreme.csproj
+++ b/TracteurXtreme/TracteurXtreme.csproj
@@ -13,6 +13,10 @@
     <None Remove="img\backCircuit2.png" />
     <None Remove="img\backCircuit3.png" />
     <None Remove="img\backPageAccueil.png" />
+    <None Remove="img\bonus\bonus_1roue.png" />
+    <None Remove="img\bonus\bonus_champs.png" />
+    <None Remove="img\bonus\bonus_desRoues.png" />
+    <None Remove="img\bonus\bonus_diesel.png" />
     <None Remove="img\circuit1.png" />
     <None Remove="img\circuit3.png" />
     <None Remove="img\decorNiveau\pisteAquatique.jpg" />
@@ -53,6 +57,10 @@
     <Resource Include="img\backCircuit2.png" />
     <Resource Include="img\backCircuit3.png" />
     <Resource Include="img\backPageAccueil.png" />
+    <Resource Include="img\bonus\bonus_1roue.png" />
+    <Resource Include="img\bonus\bonus_champs.png" />
+    <Resource Include="img\bonus\bonus_desRoues.png" />
+    <Resource Include="img\bonus\bonus_diesel.png" />
     <Resource Include="img\circuit1.png" />
     <Resource Include="img\circuit3.png" />
     <Resource Include="img\decorNiveau\pisteAquatique.jpg" />
