reparation code pour chemin Uri
si jamais y a des erreurs de conflit je m'en occuperai et l'erreur c'est juste qu'il est pas en ressources

--- a/TracteurXtreme/TracteurXtreme.csproj
+++ b/TracteurXtreme/TracteurXtreme.csproj
@@ -49,7 +49,14 @@
     <None Remove="img\piste.png" />
     <None Remove="img\piste_fondVert.png" />
     <None Remove="img\race_tracteur.png" />
+    <None Remove="img\tabPistes\piste1.txt" />
     <None Remove="img\tracteur_vert.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="img\tabPistes\piste1.txt">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
